--- a/ASClient/app/src/main/res/layout/main.xml
+++ b/ASClient/app/src/main/res/layout/main.xml
@@ -18,16 +18,16 @@
                   android:orientation="horizontal"
                   android:gravity="bottom">
 
-        <EditText android:inputType="textMultiLine|textNoSuggestions"
-                  android:layout_width="0dp"
-                  android:layout_height="40dp"
-                  android:id="@+id/editText"
-                  android:layout_weight="1"/>
-
         <Button android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/send_button"
                 android:layout_gravity="center_vertical"
                 android:text="send" />
+
+        <Button android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/protocol_button"
+                android:layout_gravity="center_vertical"
+                android:text="tcp" />
     </LinearLayout>
 </LinearLayout>
